--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node backend/server.js",
-    "server":"nodemon backend/server.js",
-    "client":"npm start --prefix frontend",
-    "dev":"concurrently \"npm run server\" \"npm run client\" "
+    "server": "nodemon backend/server.js",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
   "author": "Zitao Wang",
   "license": "MIT",
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.1",
+    "dotenv": "^16.3.1",
     "nodemon": "^3.0.1"
   }
 }
